<resources>
    <string name="app_name">Turf-dev</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="no_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="remembered_password_login">Remembered your password? Login</string>
    <string name="search_for"><font size="15">Search for turfs or locations</font></string>
    <string name="quote">Never say never because limits, like fears are often just illusions - Michael Jordan</string>
    <string name="near_me">Near me</string>
    <string name="at"> at </string>
    <string name="slot">Slot - </string>
    <string name="id">ID - </string>
    <string name="transaction">Transaction</string>
    <string name="description">Description</string>
    <string name="book_your_slot">Book your slots</string>

    <style name="profile">Profile</style>

    <string name="update_profile">Update profile</string>

</resources>